--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "watch": "nodemon index.js",
     "test-watch": "jest --watchAll",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint '**/*.js'"
   },
   "jest": {
     "testEnvironment": "node"
@@ -30,5 +31,14 @@
     "require-directory": "^2.1.1",
     "supertest": "^3.3.0",
     "swagger-ui-express": "^4.0.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Adrian-Huebner-401-advanced-javascript/Bearer-Auth.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Adrian-Huebner-401-advanced-javascript/Bearer-Auth/issues"
+  },
+  "homepage": "https://github.com/Adrian-Huebner-401-advanced-javascript/Bearer-Auth#readme"
 }
